force-app/logger/sfdc-logger/objects/Logger_Config_Ada__c/Logger_Config_Ada__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Logger Configuration Settings</description>
    <label>Logger Config</label>
</CustomObject>