force-app/logger/sfdc-logger/objects/Logger_Config_Ada__c/fields/Is_Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Debug_Enabled__c</fullName>
    <description>Identifies if the Logs of Severety Debug should be created</description>
    <defaultValue>false</defaultValue>
    <label>Is Debug Enabled?</label>
    <type>Checkbox</type>
</CustomField>