force-app/logger/sfdc-logger/objects/Logger_Config_Ada__c/fields/Is_Success_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Success_Enabled__c</fullName>
    <description>Identifies if the Logs of Severety Success should be created</description>
    <defaultValue>false</defaultValue>
    <label>Is Success Enabled?</label>
    <type>Checkbox</type>
</CustomField>